# redactron

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LAUNCH.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.kiro/: create_issue.sh  kickoff_prompt.md
.kiro/hooks/: on-pr-merge.yml  on-task-start.yml  on-tests-pass.yml
.kiro/settings/: mcp.json
.kiro/specs/redactron/: design.md  requirements.md  tasks.md
.kiro/steering/: conventions.md  product.md  tech.md
.redactron/: credits_budget.md
docs/: PRIVACY.md  PROFILE.md  RELEASING.md  SECURITY.md
docs/examples/: profile-template.yaml
scripts/: log-credits.sh  test-log-credits.sh
src/redactron/: __init__.py  cli.py  config.py  errors.py  pipeline.py  profile.py
src/redactron/audit/: log.py
src/redactron/data/: profile-template.yaml
src/redactron/detect/: account_detector.py  address_detector.py  name_detector.py  presidio_detector.py
src/redactron/extract/: ocr.py  text_layer.py
src/redactron/redact/: engine.py  partial.py
src/redactron/report/: markdown.py
src/redactron/vault/: __init__.py  keychain.py  keychain_macos.py  migrate.py  store.py
src/redactron/verify/: verifier.py
tests/: test_account_detector.py  test_address_detector.py  test_audit.py  test_batch_resilience.py  test_cli.py  test_client_flag.py  test_corpus.py  test_detect.py  test_e2e_vault.py  test_extract.py  test_keychain.py  test_migration.py  test_name_detector.py  test_partial.py  test_profile.py  test_profile_crud.py  test_redact.py  test_report.py  test_run_pipeline.py  test_touchid_acl.py  test_vault.py  test_verify.py
