[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redactron"
version = "0.1.0"
description = "Local-only CLI for batch PII redaction in PDFs"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.11"
dependencies = [
    "pymupdf==1.24.11",
    "presidio-analyzer==2.2.355",
    "presidio-anonymizer==2.2.355",
    "rapidfuzz==3.9.7",
    "usaddress==0.5.10",
    "pytesseract==0.3.13",
    "typer==0.15.2",
    "click==8.1.8",
    "pydantic==2.9.2",
    "pyyaml==6.0.2",
    "rich==13.9.4",
]

[project.optional-dependencies]
ui = [
    "gradio==4.44.1",
]

[project.scripts]
redactron = "redactron.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/redactron"]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "ruff==0.7.1",
    "mypy==1.13.0",
    "types-pyyaml==6.0.12.20240917",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["fitz.*", "presidio_analyzer.*", "presidio_anonymizer.*", "usaddress.*", "pytesseract.*"]
ignore_missing_imports = true

[tool.ruff.lint.per-file-ignores]
"src/redactron/cli.py" = ["UP007"]  # Optional[X] needed; Typer 0.12 breaks with X | Y without __future__

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/redactron --cov-report=term-missing"
