[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "redactron"
dynamic = ["version"]
description = "Local-only CLI for batch PII redaction in PDFs"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.11"
keywords = ["pdf", "redaction", "pii", "privacy", "gdpr", "hipaa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "pymupdf==1.24.11",
    "presidio-analyzer==2.2.355",
    "presidio-anonymizer==2.2.355",
    "rapidfuzz==3.9.7",
    "usaddress==0.5.10",
    "pytesseract==0.3.13",
    "typer==0.15.2",
    "click==8.1.8",
    "pydantic==2.9.2",
    "pyyaml==6.0.2",
    "rich==13.9.4",
    "cryptography==43.0.3",
    "keyring==25.5.0",
]

[project.urls]
Homepage = "https://github.com/tjndr/redactron"
Source = "https://github.com/tjndr/redactron"
Issues = "https://github.com/tjndr/redactron/issues"
Changelog = "https://github.com/tjndr/redactron/blob/main/CHANGELOG.md"

[project.optional-dependencies]
ui = [
    "gradio==4.44.1",
]

[project.scripts]
redactron = "redactron.cli:app"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
exclude = [
  ".kiro",
  ".redactron",
  "scripts",
]

[tool.hatch.build.targets.wheel]
packages = ["src/redactron"]
artifacts = ["docs/examples"]

[tool.hatch.build.targets.wheel.shared-data]
"src/redactron/data" = "redactron/data"

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "ruff==0.7.1",
    "mypy==1.13.0",
    "types-pyyaml==6.0.12.20240917",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["fitz.*", "presidio_analyzer.*", "presidio_anonymizer.*", "usaddress.*", "pytesseract.*"]
ignore_missing_imports = true

[tool.ruff.lint.per-file-ignores]
"src/redactron/cli.py" = ["UP007"]  # Optional[X] needed; Typer 0.12 breaks with X | Y without __future__

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/redactron --cov-report=term-missing"
markers = [
    "macos_real_hardware: requires real macOS hardware with keychain entitlements (not run in CI)",
    "macos: macOS-only tests",
]
